--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.App-title {
+/* .App-title {
   text-align: center;
   color: indianred;
 }
@@ -11,4 +11,7 @@
 }
 .App-flink:hover {
   text-decoration: none;
+} */
+
+.App-tab-container {
 }
